--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # MySQL Database URL para Prisma
-DATABASE_URL="mysql://usuario:senha@localhost:3306/timeline_db"
+MYSQL_URL="mysql://usuario:senha@localhost:3306/timeline_db"
 
 # MongoDB Connection URI
 MONGODB_URI="mongodb://localhost:27017/timeline_db"
