--- a/package.json
+++ b/package.json
@@ -36,14 +36,18 @@
         "@nestjs/swagger": "^11.0.5",
         "@prisma/client": "^6.4.1",
         "@scalar/nestjs-api-reference": "^0.3.184",
+        "@types/uuid": "^10.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "date-fns": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.10.2",
+        "nest-winston": "^1.10.2",
         "prisma": "^6.4.1",
         "reflect-metadata": "^0.2.2",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "uuid": "^11.1.0",
+        "winston": "^3.17.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
